--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
         <include src="./partials/header.html"></include>
         <main>
           <include src="./partials/films-list-section.html"></include>
+          <include src="./partials/pagination.html"></include>
         </main>
       </div>
       <include src="./partials/footer.html"></include>
