--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
         <main>
           <include src="./partials/films-list-section.html"></include>
           <include src="./partials/pagination.html"></include>
+          <include src="./partials/to-top-btn.html"></include>
         </main>
       </div>
       <include src="./partials/footer.html"></include>
