--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
         <include src="./partials/header.html"></include>
         <main>
           <include src="./partials/films-list-section.html"></include>
-          <include src="./partials/pagination.html"></include>
+          <!-- <include src="./partials/pagination.html"></include> -->
           <include src="./partials/to-top-btn.html"></include>
         </main>
       </div>
