--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
     <div class="page-container">
       <div class="page-container__body">
         <include src="./partials/header.html"></include>
-        <main>
+        <main class="main-bgimage">
           <include src="./partials/films-list-section.html"></include>
           <include src="./partials/pagination.html"></include>
           <include src="./partials/to-top-btn.html"></include>
